...
            we can send you an email with a link to reset it.
          </Text>
        </Text>

        <View style={styles.buttonContainer}>
          <Button
            title="Reset password"
            onPress={() => {
              navigation.navigate("ResetPassword");
            }}
            backgroundColor={Colors.primary}
            textColor={Colors.secondary}
            borderRadius={30} // completely rounded
...
        </View>

        <TouchableOpacity
          style={styles.helpButton}
          onPress={() => openSupportEmail("Forgotten password")}
        >
          <Text style={styles.helpText}>I still need help</Text>
        </TouchableOpacity>
      </Animated.ScrollView>
    </SafeAreaView>
  );
}

...
