...
            </Animated.View>
          )}
        </TouchableOpacity>

        <View style={styles.footer}>
          <Button
            title="Get Started"
            onPress={() => setBottomSheetVisible(true)}
            backgroundColor="#1E5128"
            textStyle={styles.buttonText}
          />
        </View>
      </SafeAreaView>
...
          <Text style={styles.bottomSheetDescription}>
            By continuing, you agree to our Terms & Privacy Policy.
          </Text>
          <View style={styles.bottomSheetDivider} />

          <Button
            title="Login"
            onPress={() => {
              setBottomSheetVisible(false);
              navigation.navigate("Login");
            }}
            backgroundColor="#1E5128"
            textColor="#B7ED7E"
...
