...
            <View style={styles.header}>
              <BackButton onPress={handleClose} />
            </View>

            {/* Content */}
            <View style={styles.content}>
              <Text style={styles.title}>Enter Code</Text>

              <Text style={styles.subTitle}>
                Check your email to get your confirmation code. If you need to
                request a new code, go back and reselect a confirmation
              </Text>

...
                </Text>
              </View>
            </View>

            <View style={styles.verifyButtonContainer}>
              <Button
                title="Verify"
                onPress={handleVerify}
                backgroundColor={Colors.primary}
                textColor={Colors.secondary}
                borderRadius={30}
                paddingVertical={16}
                fontSize={Typography.button.fontSize}
...
