...
            },
          ]}
        >
          <View style={styles.bottomSheetHeader}>
            <CloseButton onPress={() => setBottomSheetVisible(false)} />
          </View>
          <Text style={styles.bottomSheetTitle}>Get Started</Text>
          <Text style={styles.bottomSheetDescription}>
            By continuing, you agree to our Merchant Terms & Privacy Policy.
          </Text>
          <View style={styles.bottomSheetDivider} />

          <Button
...
